# InterpretableML

./: .gitignore  README.md  ROADMAP.md  config_loader.py  experiment_utils.py  pfi_utils.py  pyproject.toml  shap_utils.py  single_run.py
.beads/: issues.jsonl
.beads/export-state/: f8c2aed2e04649f0.json
configs/: example.yaml  mvs.yaml
docs/: mvs_results_summary.md  prior_work_check.md  prior_work_reading_list.md  prior_work_summaries_rq_mapping.md  protocol.md
results/compare_tree_vs_linear/: README.md  agreement_delta.csv  agreement_summary_both.csv  performance_by_ratio.csv  performance_delta.csv  stability_delta.csv  stability_summary_both.csv
results/mvs-20260202-005159-30e35bfd/: agreement_table.csv  stability_summary.csv  stability_table.csv
results/mvs-hpo-20260202-031158-8bf30d5a/: agreement_summary.csv  agreement_table.csv  (+4 more)
scripts/: compare_tree_vs_linear.py  compute_agreement.py  compute_stability.py  corr_group_concentration_strict.py  correlation_group_study_strict.py  download_german_credit.py  generate_mvs_report.py  plot_corr_group_report.py  run_config.py  run_mvs_hpo.py  run_mvs_hpo_aug.py  run_mvs_linear_hpo.py  run_mvs_linear_hpo_aug.py  run_single.py
tests/: conftest.py  test_agreement_metrics.py  test_config_loader.py  test_experiment_utils.py  test_german_credit.py  test_hpo_utils.py  test_metrics_utils.py  test_mvs_report_summary.py  test_nested_cv.py  test_pfi_utils.py  test_protocol_checks.py  test_resampling.py  test_results_io.py  test_shap_utils.py  test_single_run.py  test_stability_metrics.py  test_xgboost_wrapper.py
(+115 files in other folders)
