[project]
name = "shap-it-like-its-hot"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.50.0",
    "xgboost>=3.1.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
